try osx travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 sudo: required
 dist: trusty
+os:
+  - linux
+  - osx
 language: java
 before_install:
-  - sudo apt-get update -qq -y
-  - apt-cache search lmdb
-  - sudo apt-get install -qq liblmdb-dev
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo apt-get update -qq -y
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; apt-cache search lmdb
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo apt-get install -qq liblmdb-dev
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; brew install lmdb
 jdk:
   - oraclejdk8
 after_success:
