Ignore exception classes in coverage statistic

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <excludes>
+            <exclude>**/Exception*</exclude>
+          </excludes>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
