Exceptions should not form part of coverage stats

--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         </executions>
         <configuration>
           <excludes>
-            <exclude>**/Exception*</exclude>
+            <exclude>**Exception*</exclude>
           </excludes>
         </configuration>
       </plugin>
