--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
       <version>0.9.2</version>
     </dependency>
     <dependency>
+      <groupId>org.agrona</groupId>
+      <artifactId>Agrona</artifactId>
+      <version>0.5</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
