--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-buffer</artifactId>
       <version>4.1.1.Final</version>
-      <optional>true</optional>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
