exclude ByteUnit from code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
         <configuration>
           <excludes>
             <exclude>**/Exception*</exclude>
+            <exclude>**/ByteUnit*</exclude>
           </excludes>
         </configuration>
       </plugin>
