--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
-sudo: required
-dist: trusty
-os:
-  - linux
-language: java
-jdk: oraclejdk8
+matrix:
+  include:
+  - os: linux
+    sudo: required
+    dist: trusty
+    language: java
+    jdk: oraclejdk8
+  - os: osx
+    language: java
+    osx_image: xcode8
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export JAVA_HOME=$(/usr/libexec/java_home); fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install lmdb; fi
 after_success:
-  - mvn clean test jacoco:report coveralls:report
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then mvn clean test jacoco:report coveralls:report; fi
 notifications:
   email:
     - ben.alex@acegi.com.au
