Reflect shared library renames in upstream project
(also improve the temporary file name to offer better context as to it
being an LmdbJava native shared library which has been extracted)

--- a/pom.xml
+++ b/pom.xml
@@ -115,19 +115,19 @@
     </dependency>
     <dependency>
       <groupId>org.lmdbjava</groupId>
-      <artifactId>native-linux-x86_64</artifactId>
+      <artifactId>lmdbjava-native-linux-x86_64</artifactId>
       <version>0.9.18-1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.lmdbjava</groupId>
-      <artifactId>native-windows-x86_64</artifactId>
+      <artifactId>lmdbjava-native-windows-x86_64</artifactId>
       <version>0.9.18-1</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.lmdbjava</groupId>
-      <artifactId>native-osx-x86_64</artifactId>
+      <artifactId>lmdbjava-native-osx-x86_64</artifactId>
       <version>0.9.18-1</version>
       <optional>true</optional>
     </dependency>
