Travis changes to reflect BinTray -> Maven support

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
   </repositories>
   <distributionManagement>
     <repository>
-      <id>bintray-lmdbjava-maven</id>
+      <id>bintray-dist-maven</id>
       <name>lmdbjava-maven</name>
       <url>https://api.bintray.com/maven/lmdbjava/maven/org.lmdbjava:lmdbjava/;publish=1</url>
     </repository>
