Update readme and insert a no-op release profile
(the no-op release profile is to match RELEASE.md, which specifies to
use -Prelease as some projects - like native - do require it)

--- a/pom.xml
+++ b/pom.xml
@@ -231,4 +231,9 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>release</id>
+    </profile>
+  </profiles>
 </project>
