--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 matrix:
   include:
   - os: linux
-    sudo: required
-    dist: trusty
+    sudo: false
     language: java
     jdk: oraclejdk8
   - os: osx
