--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 matrix:
   include:
   - os: linux
-    sudo: false
+    sudo: required
+    dist: trusty
     language: java
     jdk: oraclejdk8
   - os: osx
