Use external ByteUnit
A few reasons for this:

1. We cannot reassign the copyright automatically. While we could exclude
this compliation unit from copyright header handling, it's safer to simply
not include IP we didn't create or receive via an intentional, explicit
contribution (eg a pull request).

2. There were no tests for ByteUnit, whereas upstream there are proper
tests. This therefore required a coverage exclusion.

3. Fixes and improvements made upstream to ByteUnit will be noticed via
new versions appearing in Maven Central and being detected via VersionEye or
the new Maven-based versions-maven-plugin. We therefore won't need to
merge into our source tree any fixes/improvements made upstream.

4. I have removed the ByteUnit reference from Env. As such ByteUnit
is effectively optional, but I've left it in place as a standard POM
dependency given it's likely to be useful and the JAR is only 23 KB. If
users object in the future we can always make it an optional dependency
without any further code changes.

5. There are other units now present in ByteUnit, such as decimal, bit
and binary units. Upstream also has other goodies like human-friendly
string rendering. An end user application is likely to find value in
these types for other purposes beyond LMDB. If users don't find value,
they can exclude the dependency entirely and LmdbJava will still work.

6. If we prefer to ByteUnit shipped with LmdbJava, we can use the
existing Shade plugin to achieve most of the maintenance benefits
above. We don't need to maintain its compilation unit(s) in our repo.

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
       <version>0.9.2</version>
     </dependency>
     <dependency>
+      <groupId>com.jakewharton.byteunits</groupId>
+      <artifactId>byteunits</artifactId>
+      <version>0.9.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.agrona</groupId>
       <artifactId>Agrona</artifactId>
       <version>0.5.2</version>
@@ -192,22 +197,12 @@
                       <counter>LINE</counter>
                       <minimum>0.95</minimum>
                     </limit>
-                    <limit>
-                      <counter>COMPLEXITY</counter>
-                      <minimum>0.60</minimum>
-                    </limit>
                   </limits>
                 </rule>
               </rules>
             </configuration>
           </execution>
         </executions>
-        <configuration>
-          <excludes>
-            <exclude>**/Exception*</exclude>
-            <exclude>**/ByteUnit*</exclude>
-          </excludes>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
