Move Coveralls Maven Plugin to Travis profile

--- a/pom.xml
+++ b/pom.xml
@@ -205,11 +205,6 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.eluder.coveralls</groupId>
-        <artifactId>coveralls-maven-plugin</artifactId>
-        <version>4.2.0</version>
-      </plugin>
-      <plugin>
         <artifactId>maven-source-plugin</artifactId>
         <version>3.0.1</version>
         <executions>
@@ -460,6 +455,23 @@
   <profiles>
     <profile>
       <id>release</id>
+    </profile>
+    <profile>
+      <id>travis</id>
+      <activation>
+        <property>
+          <name>env.TRAVIS</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eluder.coveralls</groupId>
+            <artifactId>coveralls-maven-plugin</artifactId>
+            <version>4.2.0</version>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 </project>
